// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders snapshot correctly 1`] = `
<div
  className="sc-ilhmMj iYnNNv"
>
  <div
    className="sc-kDvujY koyayW sc-cCjUiG gTZwbs"
  >
    <button
      aria-label="Button"
      className="sc-gswNZR eAAEbK"
      data-testid="button"
      disabled={false}
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      size="large"
    >
      <span
        className="sc-bcXHqe jeMYyn"
      >
        Projects
      </span>
    </button>
  </div>
  <div
    className="sc-jIRcFI dHMFjt"
  >
    <div
      className="sc-hhOBVt iFuzkw"
    >
      <div
        className="sc-gYbzsP lbNYSb"
      >
        <div
          className="sc-hHTYSt cXlgDK"
        >
          <img
            className="sc-hBxehG jKmbGY"
            src="/images/me.jpg"
          />
          <span
            className="sc-bqWxrE jFgBe"
          >
            Frontend Web Developer
          </span>
          <div
            className="sc-fEXmlR hRrSOb"
          >
            <span
              className="sc-ksBlkl bOpCiB"
            >
              <span>
                Hi! I use React & Typescript to build a lot of cool things.
              </span>
              <div>
                Working at:
                <a
                  className="sc-fnGiBr LZhWN"
                  href="https://boost-it.pt/pt/"
                >
                  Boost-IT
                </a>
              </div>
            </span>
          </div>
          <div
            className="sc-bjfHbI jJMIbg"
          >
            <div
              className="sc-dkrFOg hmHHOD sc-idXgbr gGEryw"
            >
              <a
                className="sc-ftTHYK PBCua"
                href="https://www.linkedin.com/in/manuel-correia2209/"
              >
                <div
                  className="sc-hLBbgP"
                >
                  <img
                    className="sc-jSUZER hTCUaC"
                    src="https://hermes.digitalinnovation.one/articles/cover/669b63fe-912d-484c-b313-95a46a8ee25e.png"
                  />
                </div>
                <div
                  className="sc-eDvSVe jEFxeW"
                >
                  <span
                    className="sc-gKPRtg hcEIrj"
                  >
                    LinkedIn
                  </span>
                </div>
              </a>
            </div>
            <div
              className="sc-dkrFOg hmHHOD sc-idXgbr gGEryw"
            >
              <a
                className="sc-ftTHYK PBCua"
                href="https://github.com/manuelc2209/react-ui"
              >
                <div
                  className="sc-hLBbgP"
                >
                  <img
                    className="sc-jSUZER hTCUaC"
                    src="https://hermes.digitalinnovation.one/articles/cover/7b4fbb1d-f57a-4420-9209-ee976b171bdf.jpg"
                  />
                </div>
                <div
                  className="sc-eDvSVe jEFxeW"
                >
                  <span
                    className="sc-gKPRtg hcEIrj"
                  >
                    Github
                  </span>
                </div>
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<div>
  <div
    class="sc-ilhmMj iYnNNv"
  >
    <div
      class="sc-kDvujY koyayW sc-cCjUiG gTZwbs"
    >
      <button
        aria-label="Button"
        class="sc-gswNZR eAAEbK"
        data-testid="button"
      >
        <span
          class="sc-bcXHqe jeMYyn"
        >
          Projects
        </span>
      </button>
    </div>
    <div
      class="sc-jIRcFI dHMFjt"
    >
      <div
        class="sc-hhOBVt iFuzkw"
      >
        <div
          class="sc-gYbzsP lbNYSb"
        >
          <div
            class="sc-hHTYSt cXlgDK"
          >
            <img
              class="sc-hBxehG jKmbGY"
              src="/images/me.jpg"
            />
            <span
              class="sc-bqWxrE jFgBe"
            >
              Frontend Web Developer
            </span>
            <div
              class="sc-fEXmlR hRrSOb"
            >
              <span
                class="sc-ksBlkl bOpCiB"
              >
                <span>
                  Hi! I use React & Typescript to build a lot of cool things.
                </span>
                <div>
                  Working at:
                  <a
                    class="sc-fnGiBr LZhWN"
                    href="https://boost-it.pt/pt/"
                  >
                    Boost-IT
                  </a>
                </div>
              </span>
            </div>
            <div
              class="sc-bjfHbI jJMIbg"
            >
              <div
                class="sc-dkrFOg hmHHOD sc-idXgbr gGEryw"
              >
                <a
                  class="sc-ftTHYK PBCua"
                  href="https://www.linkedin.com/in/manuel-correia2209/"
                >
                  <div
                    class="sc-hLBbgP"
                  >
                    <img
                      class="sc-jSUZER hTCUaC"
                      src="https://hermes.digitalinnovation.one/articles/cover/669b63fe-912d-484c-b313-95a46a8ee25e.png"
                    />
                  </div>
                  <div
                    class="sc-eDvSVe jEFxeW"
                  >
                    <span
                      class="sc-gKPRtg hcEIrj"
                    >
                      LinkedIn
                    </span>
                  </div>
                </a>
              </div>
              <div
                class="sc-dkrFOg hmHHOD sc-idXgbr gGEryw"
              >
                <a
                  class="sc-ftTHYK PBCua"
                  href="https://github.com/manuelc2209/react-ui"
                >
                  <div
                    class="sc-hLBbgP"
                  >
                    <img
                      class="sc-jSUZER hTCUaC"
                      src="https://hermes.digitalinnovation.one/articles/cover/7b4fbb1d-f57a-4420-9209-ee976b171bdf.jpg"
                    />
                  </div>
                  <div
                    class="sc-eDvSVe jEFxeW"
                  >
                    <span
                      class="sc-gKPRtg hcEIrj"
                    >
                      Github
                    </span>
                  </div>
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
